<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RoutesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppTheme"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/fromText"
                app:layout_constraintTop_toTopOf="@+id/fromText"
                app:srcCompat="@drawable/ic_my_location_24dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/toText"
                app:layout_constraintTop_toTopOf="@+id/toText"
                app:srcCompat="@drawable/ic_place_white" />

            <ImageButton
                android:id="@+id/routesPageBackButton"
                android:layout_width="30dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_24dp" />

            <TextView
                android:id="@+id/toText"
                android:layout_width="303dp"
                android:layout_height="39dp"
                android:layout_marginTop="60dp"
                android:background="#29FFFFFF"
                android:clickable="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:onClick="onClickTo"
                android:padding="8dp"
                android:text="@string/to_destination"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toEndOf="@+id/routesPageBackButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fromText"
                android:layout_width="303dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="#29FFFFFF"
                android:clickable="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:onClick="onClickFrom"
                android:padding="8dp"
                android:text="@string/from_location"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toEndOf="@+id/routesPageBackButton"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="409dp"
                android:layout_height="40dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toText">

                <ImageButton
                    android:id="@+id/filterButtonTransit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickTransit"
                    android:padding="10dp"
                    app:srcCompat="@drawable/transit_selection" />

                <ImageButton
                    android:id="@+id/filterButtonShuttle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickShuttle"
                    android:padding="10dp"
                    app:srcCompat="@drawable/shuttle_selection" />

                <ImageButton
                    android:id="@+id/filterButtonWalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickWalk"
                    android:padding="10dp"
                    app:srcCompat="@drawable/walk_selection" />

                <ImageButton
                    android:id="@+id/filterButtonCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickCar"
                    android:padding="10dp"
                    app:srcCompat="@drawable/car_selection" />

                <ImageButton
                    android:id="@+id/filterButtonDisability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickDisability"
                    android:padding="10dp"
                    app:srcCompat="@drawable/disability_selection" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/allRoutes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:addStatesFromChildren="false"
        android:duplicateParentState="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.RoutesActivity"
        tools:showIn="@layout/routes_activity">
    </ListView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>