<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/routeOverviewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="12"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mainTransportType"
            android:layout_width="0.01dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/details"
            android:layout_width="187dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/arrivalAndDepartureTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>
