<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infocardLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info_card_title"
...
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="35sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/directions"
            style="@style/InfoCardButton"
            android:layout_marginEnd="15sp"
            android:drawableLeft="@drawable/ic_directions_black_24dp"
            android:text="@string/directions"
            app:iconPadding="5dp" />

...
